--- a/.github/workflows/scheduled_job.yml
+++ b/.github/workflows/scheduled_job.yml
@@ -34,12 +34,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt  # 安装依赖
 
-      # 4. 设置工作目录
-      - name: Set working directory
-        run: |
-          cd /home/runner/work/new_project/new_project
-
-      # 5. 运行脚本
+      # 4. 运行脚本
       - name: Run script
         env:
           LAOHUANGLI_API_KEY: ${{ secrets.LAOHUANGLI_API_KEY }}  # 老黄历 API Key
@@ -48,9 +43,10 @@ jobs:
           WXPUSHER_TARGET_TYPE: ${{ secrets.WXPUSHER_TARGET_TYPE }}  # 目标类型（topic 或 uid）
           WXPUSHER_TARGET_ID: ${{ secrets.WXPUSHER_TARGET_ID }}      # 目标 ID（Topic ID 或 UID）
         run: |
-          python message/main.py || exit 1  # 如果脚本失败，退出并标记工作流为失败
+          cd $GITHUB_WORKSPACE  # 切换到工作目录
+          python message/main.py || exit 1  # 运行 Python 脚本
 
-      # 6. 提交更新的 CSV 文件并创建 Pull Request
+      # 5. 提交更新的 CSV 文件并创建 Pull Request
       - name: Commit updated CSV files
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 使用 GitHub Token
