--- a/.github/workflows/scheduled_job.yml
+++ b/.github/workflows/scheduled_job.yml
@@ -9,6 +9,10 @@ jobs:
   run-script:
     runs-on: ubuntu-latest  # 使用最新的 Ubuntu 环境
 
+    # 设置权限
+    permissions:
+      contents: write  # 允许推送到仓库
+
     services:
       selenium:
         image: selenium/standalone-chrome  # 使用 Selenium 的 Chrome 镜像
@@ -49,7 +53,7 @@ jobs:
       # 5. 提交更新的 CSV 文件并创建 Pull Request
       - name: Commit updated CSV files
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 使用 GitHub Token
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 使用 GITHUB_TOKEN
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
@@ -60,7 +64,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}  # 使用 GITHUB_TOKEN
           branch: automated-updates  # 新分支名称
           base: master  # 目标分支
           title: "Automated CSV File Update"
