--- a/.github/workflows/scheduled_job.yml
+++ b/.github/workflows/scheduled_job.yml
@@ -12,6 +12,7 @@ jobs:
     # 设置权限
     permissions:
       contents: write  # 允许推送到仓库
+      pull-requests: write  # 允许创建 Pull Request
 
     services:
       selenium:
