--- a/.github/workflows/scheduled_job.yml
+++ b/.github/workflows/scheduled_job.yml
@@ -2,7 +2,7 @@ name: Daily Report Automation
 
 on:
   schedule:
-    - cron: '0 1 * * *'  # 每天 UTC 时间 01:00 执行（中国时间 09:00）
+    - cron: '30 2 * * *'  # 每天 UTC 时间 02:30 执行（北京时间 10:30）
   workflow_dispatch:  # 允许手动触发
 
 jobs:
